--- a/titanic_pred/main.ipynb
+++ b/titanic_pred/main.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "(891, 12)"
       ]
      },
-     "execution_count": 283,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -219,25 +219,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.810426040494938\n"
+     ]
+    }
+   ],
    "source": [
     "# from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# X_train, X_test, y_train, y_test = train_test_split(X, y)\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(X, y, test_size=0.9)\n",
     "X_train = X\n",
     "X_test = test[features]\n",
     "y_train = y\n",
     "\n",
-    "model = RandomForestClassifier()\n",
+    "model = RandomForestClassifier(n_estimators=75)\n",
     "\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "scores = cross_val_score(model, X_train, y_train, cv=7, scoring='accuracy')\n",
+    "print(scores.mean())\n",
     "model.fit(X_train, y_train)\n",
     "\n",
     "predictions = model.predict(X_test)\n",
-    "\n",
+    "#predictions\n",
     "pd_pred = pd.DataFrame({\"PassengerId\": test[\"PassengerId\"], \"Survived\": predictions})\n",
     "pd_pred.to_csv(\"./dataset/submission.csv\", index=False)"
    ]
